fix quickpost overflow css

--- a/btn/btn-future/btn-future-dark-classic.css
+++ b/btn/btn-future/btn-future-dark-classic.css
@@ -5153,3 +5153,7 @@ div#footer {
 #userinfo_username {
     display: none !important;
 }
+
+#quickpost {
+    overflow: inherit !important;
+}
